--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
+  bloc: ^9.1.1
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.1
   dio: ^5.9.1
   lottie: ^3.3.2
   google_fonts: ^8.0.0
+  supabase_flutter: ^2.12.0
+  flutter_dotenv: ^6.0.0
+  equatable: ^2.0.8
+  get_it: ^9.2.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +71,8 @@ flutter:
     - assets/lottie/splashlottie.json
     - assets/images/checkcrack.png
     - assets/images/darkwall.jpg
+    - assets/images/inkcolor.jpg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
